--- a/app/index.html
+++ b/app/index.html
@@ -236,52 +236,58 @@
   <main class="main">
     <section class="slider-top">
       <h2 class="sr-only">Фрешок Онлайн-Маркет Скидки</h2>
-<!-- когда уменьшаю экран пропадают фоновые картинки, просто белый фон вместо них, не пойму в чем проблема, раньше такого не было. Обновляю страницу они опоявляются, начинаю опять уменьшать экран и они пропадают и так по кругу -->
+      <!-- когда уменьшаю экран пропадают фоновые картинки, просто белый фон вместо них, не пойму в чем проблема, раньше такого не было. Обновляю страницу они опоявляются, начинаю опять уменьшать экран и они пропадают и так по кругу -->
       <ul class="slider-top__inner">
-        <li class="slider-top__item" style="background-image: url('images/slider/top-slider1.jpg');">
-          <div class="container">
-            <div class="slider-top__content">
-              <div class="slider-top__name">
-                <h3 class="slider-top__title">
-                  СВЕЖАЧОК ВАМ в ХАТУ
-                  <span class="slider-top__subtitle">Скидка -50%</span>
-                </h3>
-                <p class="slider-top__text">
-                  Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!
-                </p>
+        <li class="slider-top__item">
+          <div class="slider-top__item-img" style="background-image: url('images/slider/top-slider1.jpg');">
+            <div class="container">
+              <div class="slider-top__content">
+                <div class="slider-top__name">
+                  <h3 class="slider-top__title">
+                    СВЕЖАЧОК ВАМ в ХАТУ
+                    <span class="slider-top__subtitle">Скидка -50%</span>
+                  </h3>
+                  <p class="slider-top__text">
+                    Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!
+                  </p>
+                </div>
+                <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
               </div>
-              <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
             </div>
           </div>
         </li>
 
-        <li class="slider-top__item" style=" background-image: url('images/slider/top-slider2.jpg');">
-          <div class="container">
-            <div class="slider-top__content">
-              <div class="slider-top__name">
-                <h3 class="slider-top__title">
-                  накрути себе томатов
-                  <span class="slider-top__subtitle">акция: 3 кг по цене 1</span>
-                </h3>
-                <p class="slider-top__text">
-                  Только с 12 по 15 июля скидка на домашние помидорчики
-                </p>
+        <li class="slider-top__item">
+          <div class="slider-top__item-img" style="background-image: url('images/slider/top-slider2.jpg');">
+            <div class="container">
+              <div class="slider-top__content">
+                <div class="slider-top__name">
+                  <h3 class="slider-top__title">
+                    накрути себе томатов
+                    <span class="slider-top__subtitle">акция: 3 кг по цене 1</span>
+                  </h3>
+                  <p class="slider-top__text">
+                    Только с 12 по 15 июля скидка на домашние помидорчики
+                  </p>
+                </div>
+                <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
               </div>
-              <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
             </div>
           </div>
         </li>
 
-        <li class="slider-top__item" style="background-image: url('images/slider/top-slider3.jpg');">
-          <div class="container">
-            <div class="slider-top__content">
-              <div class="slider-top__name">
-                <h3 class="slider-top__title">
-                  Пусть остальные позеленеют от зависти
-                  <span class="slider-top__subtitle">Распродажа зелени</span>
-                </h3>
+        <li class="slider-top__item">
+          <div class="slider-top__item-img" style="background-image: url('images/slider/top-slider3.jpg');">
+            <div class="container">
+              <div class="slider-top__content">
+                <div class="slider-top__name">
+                  <h3 class="slider-top__title">
+                    Пусть остальные позеленеют от зависти
+                    <span class="slider-top__subtitle">Распродажа зелени</span>
+                  </h3>
+                </div>
+                <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
               </div>
-              <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
             </div>
           </div>
         </li>
