--- a/app/catalog-page.html
+++ b/app/catalog-page.html
@@ -776,12 +776,12 @@
                 <div class="product-item__img-box">
                   <a class="product-item__img-link" href="#">
                     <img class="product-item__images" src="images/product/coffee.jpg" width="300" height="215"
-                      alt="коффе">
+                      alt="кофе">
                   </a>
                 </div>
 
                 <div class="product-item__info">
-                  <span class="product-item__status">заканчивается</span>
+                  <span class="product-item__status product-item__status-end">заканчивается</span>
                   <span class="product-item__rating">4.5</span>
                 </div>
 
@@ -825,7 +825,7 @@
                 </div>
 
                 <div class="product-item__info">
-                  <span class="product-item__status">заканчивается</span>
+                  <span class="product-item__status product-item__status-end">заканчивается</span>
                   <span class="product-item__rating">4.5</span>
                 </div>
 
@@ -961,7 +961,7 @@
                 </div>
 
                 <div class="product-item__info">
-                  <span class="product-item__status">заканчивается</span>
+                  <span class="product-item__status product-item__status-end">заканчивается</span>
                   <span class="product-item__rating">4.5</span>
                 </div>
 
@@ -1054,7 +1054,7 @@
                 </div>
 
                 <div class="product-item__info">
-                  <span class="product-item__status">заканчивается</span>
+                  <span class="product-item__status product-item__status-end">заканчивается</span>
                   <span class="product-item__rating">4.5</span>
                 </div>
 
